--- a/mechanizmy/hubMaterials/stylHub.css
+++ b/mechanizmy/hubMaterials/stylHub.css
@@ -107,12 +107,12 @@ body{
             background: linear-gradient(to right,rgb(0, 255, 51),rgb(51, 255, 102));
             padding-left: 5px;
         }
-        #mac{
-            color: black;
+        #chart{
             clear: both;
             width: 157px;
             height: 162px;
             margin-bottom: 10px;
+            background: linear-gradient(to right,rgb(0, 51, 255),rgb(102, 255, 255));
             padding-left: 5px;
         }
 
